--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Document-Backed Lending DApp</title>
-  <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+  <!-- Load Web3.js -->
+  <script src="https://cdn.jsdelivr.net/npm/web3@1.8.3/dist/web3.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body { font-family: 'Segoe UI', sans-serif; transition: all 0.3s; }
@@ -60,21 +61,38 @@
     let account;
     let contract;
 
-    // 🔹 Your Contract Details
-    const contractAddress = "0x081C0Dd797dAd42B954154ED6dd81346fac5bA2b"; // Change if needed
-    const contractABI = [/* Paste your full ABI JSON here */];
+    // Contract Address & ABI
+    const contractAddress = "0x081C0Dd797dAd42B954154ED6dd81346fac5bA2b";
+    const contractABI = [
+      {"inputs":[],"stateMutability":"nonpayable","type":"constructor"},
+      {"inputs":[],"name":"borrower","outputs":[{"internalType":"address payable","name":"","type":"address"}],"stateMutability":"view","type":"function"},
+      {"inputs":[],"name":"docSubmitted","outputs":[{"internalType":"bool","name":"","type":"bool"}],"stateMutability":"view","type":"function"},
+      {"inputs":[],"name":"documentHash","outputs":[{"internalType":"bytes32","name":"","type":"bytes32"}],"stateMutability":"view","type":"function"},
+      {"inputs":[],"name":"interestRate","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"},
+      {"inputs":[],"name":"lender","outputs":[{"internalType":"address payable","name":"","type":"address"}],"stateMutability":"view","type":"function"},
+      {"inputs":[],"name":"loanAmount","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"},
+      {"inputs":[],"name":"loanOffered","outputs":[{"internalType":"bool","name":"","type":"bool"}],"stateMutability":"view","type":"function"},
+      {"inputs":[],"name":"loanRepaid","outputs":[{"internalType":"bool","name":"","type":"bool"}],"stateMutability":"view","type":"function"},
+      {"inputs":[],"name":"loanStartTime","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"},
+      {"inputs":[],"name":"loanTaken","outputs":[{"internalType":"bool","name":"","type":"bool"}],"stateMutability":"view","type":"function"},
+      {"inputs":[{"internalType":"uint256","name":"_interestRate","type":"uint256"},{"internalType":"bytes32","name":"_docHash","type":"bytes32"}],"name":"offerLoan","outputs":[],"stateMutability":"payable","type":"function"},
+      {"inputs":[],"name":"repayLoan","outputs":[],"stateMutability":"payable","type":"function"},
+      {"inputs":[],"name":"resetLoan","outputs":[],"stateMutability":"nonpayable","type":"function"},
+      {"inputs":[{"internalType":"bytes32","name":"_userDocHash","type":"bytes32"}],"name":"submitDocument","outputs":[],"stateMutability":"nonpayable","type":"function"},
+      {"inputs":[],"name":"takeLoan","outputs":[],"stateMutability":"nonpayable","type":"function"}
+    ];
 
-    // Toggle Dark Mode
     function toggleDark() { document.body.classList.toggle('dark'); }
 
     async function connectWallet() {
       const status = document.getElementById("wallet");
       if (window.ethereum) {
         try {
-          const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
+          await window.ethereum.request({ method: 'eth_requestAccounts' });
+          web3 = new Web3(window.ethereum);
+          const accounts = await web3.eth.getAccounts();
           account = accounts[0];
           status.innerText = 'Wallet: ' + account;
-          web3 = new Web3(window.ethereum);
           contract = new web3.eth.Contract(contractABI, contractAddress);
           alert("✅ Wallet Connected");
         } catch (err) {
@@ -86,7 +104,6 @@
       }
     }
 
-    // Hash file using SHA-256
     async function getFileHash(file) {
       return new Promise((resolve, reject) => {
         const reader = new FileReader();
@@ -102,7 +119,7 @@
       });
     }
 
-    // Lender Functions
+    // Lender functions
     async function offerLoan() {
       if (!account) return alert("Connect wallet first!");
       const rate = document.getElementById('interestRate').value;
@@ -122,7 +139,7 @@
       catch(err){ console.error(err); alert("❌ Reset failed"); }
     }
 
-    // Borrower Functions
+    // Borrower functions
     async function submitDocument() {
       if (!account) return alert("Connect wallet first!");
       const file = document.getElementById('borrowerDoc').files[0];
@@ -143,6 +160,7 @@
       try { await contract.methods.repayLoan().send({ from: account }); alert("✅ Loan Repaid"); }
       catch(err){ console.error(err); alert("❌ Repay failed"); }
     }
+
   </script>
 </body>
 </html>
