--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Document-Backed Lending DApp</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/ethers/dist/ethers.min.js"></script>
 <style>
   body { font-family: 'Segoe UI', sans-serif; padding: 20px; }
   .card { padding: 20px; margin-bottom: 20px; border-radius: 10px; }
@@ -43,20 +44,27 @@
 </div>
 
 <script>
-let account;
+// Contract info
 const contractAddress = "0x081C0Dd797dAd42B954154ED6dd81346fac5bA2b";
 const contractABI = [ /* Paste your ABI here */ ];
 
+let provider;
+let signer;
 let contract;
+let account;
 
+// Connect wallet
 document.getElementById("connectBtn").onclick = async () => {
   if (window.ethereum) {
     try {
-      const accounts = await ethereum.request({ method: "eth_requestAccounts" });
-      account = accounts[0];
+      provider = new ethers.providers.Web3Provider(window.ethereum);
+      await provider.send("eth_requestAccounts", []);
+      signer = provider.getSigner();
+      account = await signer.getAddress();
       document.getElementById("wallet").innerText = "Wallet: " + account;
-      // Create contract instance using ethers.js-like approach
-      contract = new window.ethers.Contract(contractAddress, contractABI, window.ethereum);
+
+      // Connect contract
+      contract = new ethers.Contract(contractAddress, contractABI, signer);
       alert("✅ Wallet Connected!");
     } catch (err) {
       if (err.code === 4001) alert("❌ Connection rejected by user");
@@ -67,34 +75,31 @@ document.getElementById("connectBtn").onclick = async () => {
   }
 };
 
-// Helper to hash files
+// File hashing helper
 async function getFileHash(file) {
-  const arrayBuffer = await file.arrayBuffer();
-  const hashBuffer = await crypto.subtle.digest('SHA-256', arrayBuffer);
+  const buffer = await file.arrayBuffer();
+  const hashBuffer = await crypto.subtle.digest("SHA-256", buffer);
   const hashArray = Array.from(new Uint8Array(hashBuffer));
-  return '0x' + hashArray.map(b => b.toString(16).padStart(2,'0')).join('');
+  return "0x" + hashArray.map(b => b.toString(16).padStart(2, "0")).join("");
 }
 
-// Example for offerLoan
+// Offer loan
 document.getElementById("offerLoanBtn").onclick = async () => {
-  if (!account) return alert("Connect wallet first!");
-  const rate = document.getElementById('interestRate').value;
-  const amount = document.getElementById('loanAmount').value;
-  const file = document.getElementById('lenderDoc').files[0];
+  if (!contract) return alert("Connect wallet first!");
+  const rate = document.getElementById("interestRate").value;
+  const amount = document.getElementById("loanAmount").value;
+  const file = document.getElementById("lenderDoc").files[0];
   if (!file) return alert("Upload document!");
   const hash = await getFileHash(file);
+
   try {
-    await ethereum.request({
-      method: 'eth_sendTransaction',
-      params: [{
-        from: account,
-        to: contractAddress,
-        value: (parseFloat(amount) * 1e18).toString(16),
-        data: contract.methods.offerLoan(rate, hash).encodeABI()
-      }]
-    });
-    alert("✅ Loan Offered");
-  } catch (err) { console.error(err); alert("❌ Offer failed"); }
+    const tx = await contract.offerLoan(rate, hash, { value: ethers.utils.parseEther(amount) });
+    await tx.wait();
+    alert("✅ Loan Offered!");
+  } catch (err) {
+    console.error(err);
+    alert("❌ Offer failed");
+  }
 };
 </script>
 </body>
