--- a/index.html
+++ b/index.html
@@ -1,172 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>📜 Document-Backed Lending DApp</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/ethers/dist/ethers.min.js"></script>
-<style>
-  body {
-    font-family: 'Segoe UI', sans-serif;
-    background: linear-gradient(135deg, #f9f5ff, #e0f7fa);
-    min-height: 100vh;
-    padding: 20px;
-  }
-  h2 { 
-    text-align: center;
-    font-weight: bold;
-    background: linear-gradient(to right, #8e44ad, #3498db);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    margin-bottom: 30px;
-  }
-  .card {
-    border-radius: 20px;
-    padding: 20px;
-    margin-bottom: 20px;
-    box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-    transition: 0.3s;
-  }
-  .card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 12px 35px rgba(0,0,0,0.15);
-  }
-  .btn {
-    border-radius: 12px;
-    font-weight: 600;
-    transition: 0.3s;
-  }
-  .btn-connect { background: linear-gradient(to right,#3b82f6,#60a5fa); color:white; }
-  .btn-lender { background: linear-gradient(to right,#10b981,#34d399); color:white; }
-  .btn-borrower { background: linear-gradient(to right,#f59e0b,#fbbf24); color:white; }
-  .btn-repay { background: linear-gradient(to right,#8b5cf6,#a78bfa); color:white; }
-  #wallet { font-weight: bold; margin-top: 10px; }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lending DApp</title>
+  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to right, #6a11cb, #2575fc);
+      color: white;
+      text-align: center;
+      padding: 20px;
+    }
+    button {
+      padding: 12px 20px;
+      margin: 10px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 16px;
+      background: #ff9800;
+      color: white;
+      transition: 0.3s;
+    }
+    button:hover {
+      background: #e68900;
+    }
+    input {
+      padding: 10px;
+      margin: 10px;
+      border-radius: 6px;
+      border: none;
+      width: 200px;
+    }
+    .card {
+      background: rgba(255,255,255,0.1);
+      padding: 20px;
+      border-radius: 12px;
+      margin: 20px auto;
+      max-width: 400px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+    }
+  </style>
 </head>
 <body>
-
-<h2>📜 Document-Backed Lending DApp</h2>
-
-<div class="card text-center">
-  <h5>🔌 Wallet Connection</h5>
-  <button class="btn btn-connect" id="connectBtn">Connect MetaMask</button>
-  <p id="wallet">Wallet: Not Connected</p>
-</div>
-
-<div class="row">
-  <!-- Lender Panel -->
-  <div class="col-md-6">
-    <div class="card">
-      <h5>💰 Lender Panel</h5>
-      <input id="interestRate" class="form-control mb-2" placeholder="Interest Rate (%)">
-      <input id="loanAmount" class="form-control mb-2" placeholder="Loan Amount (ETH)">
-      <input type="file" id="lenderDoc" class="form-control mb-2">
-      <button class="btn btn-lender w-100" id="offerLoanBtn">Offer Loan</button>
-    </div>
+  <h1>🚀 Lending DApp</h1>
+  
+  <div class="card">
+    <button onclick="connectWallet()">🔗 Connect MetaMask</button>
+    <p id="account">Not Connected</p>
   </div>
 
-  <!-- Borrower Panel -->
-  <div class="col-md-6">
-    <div class="card">
-      <h5>📄 Borrower Panel</h5>
-      <input type="file" id="borrowerDoc" class="form-control mb-2">
-      <button class="btn btn-borrower w-100 mb-2" id="submitDocBtn">Submit Document</button>
-      <button class="btn btn-borrower w-100 mb-2" id="takeLoanBtn">Take Loan</button>
-      <button class="btn btn-repay w-100 mb-2" id="repayLoanBtn">Repay Loan</button>
-      <p id="status" class="mt-2"></p>
-    </div>
+  <div class="card">
+    <h2>📑 Submit Document</h2>
+    <input id="docHash" placeholder="Enter Doc Hash (bytes32)" />
+    <button onclick="submitDoc()">Submit</button>
   </div>
-</div>
 
-<script>
-// ====== Contract Info ======
-const contractAddress = "0x081C0Dd797dAd42B954154ED6dd81346fac5bA2b"; 
-const contractABI = [ /* Paste your ABI here */ ];
+  <div class="card">
+    <h2>💰 Offer Loan</h2>
+    <input id="interest" placeholder="Interest %" type="number" />
+    <input id="offerDoc" placeholder="Doc Hash (bytes32)" />
+    <input id="loanValue" placeholder="Loan Amount (ETH)" type="number" />
+    <button onclick="offerLoan()">Offer Loan</button>
+  </div>
 
-let provider;
-let signer;
-let contract;
-let account;
+  <div class="card">
+    <h2>📥 Take Loan</h2>
+    <button onclick="takeLoan()">Take Loan</button>
+  </div>
 
-// ====== Connect Wallet ======
-document.getElementById("connectBtn").onclick = async () => {
-  if (window.ethereum) {
-    try {
-      provider = new ethers.providers.Web3Provider(window.ethereum);
-      await provider.send("eth_requestAccounts", []);
-      signer = provider.getSigner();
-      account = await signer.getAddress();
-      document.getElementById("wallet").innerText = "Wallet: " + account;
+  <div class="card">
+    <h2>💸 Repay Loan</h2>
+    <input id="repayValue" placeholder="Repay Amount (ETH)" type="number" />
+    <button onclick="repayLoan()">Repay</button>
+  </div>
 
-      // Connect contract
-      contract = new ethers.Contract(contractAddress, contractABI, signer);
-      document.getElementById("status").innerText = "✅ Wallet Connected!";
-    } catch (err) {
-      if (err.code === 4001) alert("❌ Connection rejected by user");
-      else console.error(err);
+  <script>
+    const ABI = [
+      {
+        "inputs": [],
+        "stateMutability": "nonpayable",
+        "type": "constructor"
+      },
+      {
+        "inputs": [{"internalType":"bytes32","name":"_userDocHash","type":"bytes32"}],
+        "name": "submitDocument",
+        "outputs": [],
+        "stateMutability": "nonpayable",
+        "type": "function"
+      },
+      {
+        "inputs": [
+          {"internalType":"uint256","name":"_interestRate","type":"uint256"},
+          {"internalType":"bytes32","name":"_docHash","type":"bytes32"}
+        ],
+        "name": "offerLoan",
+        "outputs": [],
+        "stateMutability": "payable",
+        "type": "function"
+      },
+      {
+        "inputs": [],
+        "name": "takeLoan",
+        "outputs": [],
+        "stateMutability": "nonpayable",
+        "type": "function"
+      },
+      {
+        "inputs": [],
+        "name": "repayLoan",
+        "outputs": [],
+        "stateMutability": "payable",
+        "type": "function"
+      }
+    ];
+
+    const CONTRACT_ADDRESS = "0x95A7bF06c04b889700e6E71784B3DD1c8EDCAdC7";
+
+    let provider, signer, contract;
+
+    async function connectWallet() {
+      if (window.ethereum) {
+        provider = new ethers.providers.Web3Provider(window.ethereum);
+        await provider.send("eth_requestAccounts", []);
+        signer = provider.getSigner();
+        const address = await signer.getAddress();
+        document.getElementById("account").innerText = "Connected: " + address;
+        contract = new ethers.Contract(CONTRACT_ADDRESS, ABI, signer);
+      } else {
+        alert("Please install MetaMask!");
+      }
     }
-  } else {
-    alert("⚠️ Please install MetaMask!");
-  }
-};
 
-// ====== File hash helper ======
-async function getFileHash(file) {
-  const buffer = await file.arrayBuffer();
-  const hashBuffer = await crypto.subtle.digest("SHA-256", buffer);
-  const hashArray = Array.from(new Uint8Array(hashBuffer));
-  return "0x" + hashArray.map(b => b.toString(16).padStart(2,"0")).join("");
-}
+    async function submitDoc() {
+      const docHash = document.getElementById("docHash").value;
+      if (!docHash) return alert("Enter document hash!");
+      const tx = await contract.submitDocument(docHash);
+      await tx.wait();
+      alert("Document Submitted ✅");
+    }
 
-// ====== Offer Loan ======
-document.getElementById("offerLoanBtn").onclick = async () => {
-  if (!contract) return alert("Connect wallet first!");
-  const rate = document.getElementById("interestRate").value;
-  const amount = document.getElementById("loanAmount").value;
-  const file = document.getElementById("lenderDoc").files[0];
-  if (!file) return alert("Upload lender document!");
-  const hash = await getFileHash(file);
-  try {
-    const tx = await contract.offerLoan(rate, hash, { value: ethers.utils.parseEther(amount) });
-    await tx.wait();
-    document.getElementById("status").innerText = "✅ Loan Offered Successfully!";
-  } catch (err) {
-    console.error(err);
-    document.getElementById("status").innerText = "❌ Offer failed!";
-  }
-};
+    async function offerLoan() {
+      const interest = document.getElementById("interest").value;
+      const docHash = document.getElementById("offerDoc").value;
+      const amount = document.getElementById("loanValue").value;
+      if (!interest || !docHash || !amount) return alert("Fill all fields!");
+      const value = ethers.utils.parseEther(amount);
+      const tx = await contract.offerLoan(interest, docHash, { value });
+      await tx.wait();
+      alert("Loan Offered ✅");
+    }
 
-// ====== Borrower Actions (Submit / Take / Repay) ======
-document.getElementById("submitDocBtn").onclick = async () => {
-  if (!contract) return alert("Connect wallet first!");
-  const file = document.getElementById("borrowerDoc").files[0];
-  if (!file) return alert("Upload borrower document!");
-  const hash = await getFileHash(file);
-  try {
-    const tx = await contract.submitDocument(hash);
-    await tx.wait();
-    document.getElementById("status").innerText = "✅ Document Submitted!";
-  } catch (err) { console.error(err); document.getElementById("status").innerText="❌ Failed";}
-};
+    async function takeLoan() {
+      const tx = await contract.takeLoan();
+      await tx.wait();
+      alert("Loan Taken ✅");
+    }
 
-document.getElementById("takeLoanBtn").onclick = async () => {
-  if (!contract) return alert("Connect wallet first!");
-  try { 
-    const tx = await contract.takeLoan(); 
-    await tx.wait(); 
-    document.getElementById("status").innerText="✅ Loan Taken!"; 
-  } catch(err){ console.error(err); document.getElementById("status").innerText="❌ Failed";}
-};
-
-document.getElementById("repayLoanBtn").onclick = async () => {
-  if (!contract) return alert("Connect wallet first!");
-  try { 
-    const tx = await contract.repayLoan({ value: ethers.utils.parseEther("0.01") }); 
-    await tx.wait(); 
-    document.getElementById("status").innerText="✅ Loan Repaid!"; 
-  } catch(err){ console.error(err); document.getElementById("status").innerText="❌ Failed";}
-};
-</script>
+    async function repayLoan() {
+      const repayAmount = document.getElementById("repayValue").value;
+      if (!repayAmount) return alert("Enter repay amount!");
+      const value = ethers.utils.parseEther(repayAmount);
+      const tx = await contract.repayLoan({ value });
+      await tx.wait();
+      alert("Loan Repaid ✅");
+    }
+  </script>
 </body>
 </html>
