--- a/index.html
+++ b/index.html
@@ -1,172 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lending DApp</title>
-  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to right, #6a11cb, #2575fc);
-      color: white;
-      text-align: center;
-      padding: 20px;
-    }
-    button {
-      padding: 12px 20px;
-      margin: 10px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      font-size: 16px;
-      background: #ff9800;
-      color: white;
-      transition: 0.3s;
-    }
-    button:hover {
-      background: #e68900;
-    }
-    input {
-      padding: 10px;
-      margin: 10px;
-      border-radius: 6px;
-      border: none;
-      width: 200px;
-    }
-    .card {
-      background: rgba(255,255,255,0.1);
-      padding: 20px;
-      border-radius: 12px;
-      margin: 20px auto;
-      max-width: 400px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Document-Backed Lending DApp</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/ethers/dist/ethers.min.js"></script>
+<style>
+  body { font-family: 'Segoe UI', sans-serif; padding: 20px; }
+  .card { padding: 20px; margin-bottom: 20px; border-radius: 10px; }
+  .btn { margin-top: 10px; }
+</style>
 </head>
 <body>
-  <h1>🚀 Lending DApp</h1>
-  
-  <div class="card">
-    <button onclick="connectWallet()">🔗 Connect MetaMask</button>
-    <p id="account">Not Connected</p>
+<h2 class="text-center mb-4">📜 Document-Backed Lending DApp</h2>
+
+<div class="card">
+  <h5>🔌 Wallet Connection</h5>
+  <button class="btn btn-primary" id="connectBtn">Connect Wallet</button>
+  <p id="wallet">Wallet: Not Connected</p>
+</div>
+
+<div class="row">
+  <div class="col-md-6">
+    <div class="card bg-light">
+      <h5>💰 Lender Panel</h5>
+      <input id="interestRate" class="form-control mb-2" placeholder="Interest Rate (%)">
+      <input id="loanAmount" class="form-control mb-2" placeholder="Loan Amount (ETH)">
+      <input type="file" id="lenderDoc" class="form-control mb-2">
+      <button class="btn btn-success w-100" id="offerLoanBtn">Offer Loan</button>
+    </div>
   </div>
 
-  <div class="card">
-    <h2>📑 Submit Document</h2>
-    <input id="docHash" placeholder="Enter Doc Hash (bytes32)" />
-    <button onclick="submitDoc()">Submit</button>
+  <div class="col-md-6">
+    <div class="card bg-light">
+      <h5>📄 Borrower Panel</h5>
+      <input type="file" id="borrowerDoc" class="form-control mb-2">
+      <button class="btn btn-primary w-100" id="submitDocBtn">Submit Document</button>
+      <button class="btn btn-info w-100" id="takeLoanBtn">Take Loan</button>
+      <button class="btn btn-warning w-100" id="repayLoanBtn">Repay Loan</button>
+    </div>
   </div>
+</div>
 
-  <div class="card">
-    <h2>💰 Offer Loan</h2>
-    <input id="interest" placeholder="Interest %" type="number" />
-    <input id="offerDoc" placeholder="Doc Hash (bytes32)" />
-    <input id="loanValue" placeholder="Loan Amount (ETH)" type="number" />
-    <button onclick="offerLoan()">Offer Loan</button>
-  </div>
+<script>
+// Contract info
+const contractAddress = "0x081C0Dd797dAd42B954154ED6dd81346fac5bA2b";
+const contractABI = [ /* Paste your ABI here */ ];
 
-  <div class="card">
-    <h2>📥 Take Loan</h2>
-    <button onclick="takeLoan()">Take Loan</button>
-  </div>
+let provider;
+let signer;
+let contract;
+let account;
 
-  <div class="card">
-    <h2>💸 Repay Loan</h2>
-    <input id="repayValue" placeholder="Repay Amount (ETH)" type="number" />
-    <button onclick="repayLoan()">Repay</button>
-  </div>
+// Connect wallet
+document.getElementById("connectBtn").onclick = async () => {
+  if (window.ethereum) {
+    try {
+      provider = new ethers.providers.Web3Provider(window.ethereum);
+      await provider.send("eth_requestAccounts", []);
+      signer = provider.getSigner();
+      account = await signer.getAddress();
+      document.getElementById("wallet").innerText = "Wallet: " + account;
 
-  <script>
-    const ABI = [
-      {
-        "inputs": [],
-        "stateMutability": "nonpayable",
-        "type": "constructor"
-      },
-      {
-        "inputs": [{"internalType":"bytes32","name":"_userDocHash","type":"bytes32"}],
-        "name": "submitDocument",
-        "outputs": [],
-        "stateMutability": "nonpayable",
-        "type": "function"
-      },
-      {
-        "inputs": [
-          {"internalType":"uint256","name":"_interestRate","type":"uint256"},
-          {"internalType":"bytes32","name":"_docHash","type":"bytes32"}
-        ],
-        "name": "offerLoan",
-        "outputs": [],
-        "stateMutability": "payable",
-        "type": "function"
-      },
-      {
-        "inputs": [],
-        "name": "takeLoan",
-        "outputs": [],
-        "stateMutability": "nonpayable",
-        "type": "function"
-      },
-      {
-        "inputs": [],
-        "name": "repayLoan",
-        "outputs": [],
-        "stateMutability": "payable",
-        "type": "function"
-      }
-    ];
-
-    const CONTRACT_ADDRESS = "0x95A7bF06c04b889700e6E71784B3DD1c8EDCAdC7";
-
-    let provider, signer, contract;
-
-    async function connectWallet() {
-      if (window.ethereum) {
-        provider = new ethers.providers.Web3Provider(window.ethereum);
-        await provider.send("eth_requestAccounts", []);
-        signer = provider.getSigner();
-        const address = await signer.getAddress();
-        document.getElementById("account").innerText = "Connected: " + address;
-        contract = new ethers.Contract(CONTRACT_ADDRESS, ABI, signer);
-      } else {
-        alert("Please install MetaMask!");
-      }
+      // Connect contract
+      contract = new ethers.Contract(contractAddress, contractABI, signer);
+      alert("✅ Wallet Connected!");
+    } catch (err) {
+      if (err.code === 4001) alert("❌ Connection rejected by user");
+      else alert(err.message);
     }
+  } else {
+    alert("⚠️ Please install MetaMask!");
+  }
+};
 
-    async function submitDoc() {
-      const docHash = document.getElementById("docHash").value;
-      if (!docHash) return alert("Enter document hash!");
-      const tx = await contract.submitDocument(docHash);
-      await tx.wait();
-      alert("Document Submitted ✅");
-    }
+// File hashing helper
+async function getFileHash(file) {
+  const buffer = await file.arrayBuffer();
+  const hashBuffer = await crypto.subtle.digest("SHA-256", buffer);
+  const hashArray = Array.from(new Uint8Array(hashBuffer));
+  return "0x" + hashArray.map(b => b.toString(16).padStart(2, "0")).join("");
+}
 
-    async function offerLoan() {
-      const interest = document.getElementById("interest").value;
-      const docHash = document.getElementById("offerDoc").value;
-      const amount = document.getElementById("loanValue").value;
-      if (!interest || !docHash || !amount) return alert("Fill all fields!");
-      const value = ethers.utils.parseEther(amount);
-      const tx = await contract.offerLoan(interest, docHash, { value });
-      await tx.wait();
-      alert("Loan Offered ✅");
-    }
+// Offer loan
+document.getElementById("offerLoanBtn").onclick = async () => {
+  if (!contract) return alert("Connect wallet first!");
+  const rate = document.getElementById("interestRate").value;
+  const amount = document.getElementById("loanAmount").value;
+  const file = document.getElementById("lenderDoc").files[0];
+  if (!file) return alert("Upload document!");
+  const hash = await getFileHash(file);
 
-    async function takeLoan() {
-      const tx = await contract.takeLoan();
-      await tx.wait();
-      alert("Loan Taken ✅");
-    }
-
-    async function repayLoan() {
-      const repayAmount = document.getElementById("repayValue").value;
-      if (!repayAmount) return alert("Enter repay amount!");
-      const value = ethers.utils.parseEther(repayAmount);
-      const tx = await contract.repayLoan({ value });
-      await tx.wait();
-      alert("Loan Repaid ✅");
-    }
-  </script>
+  try {
+    const tx = await contract.offerLoan(rate, hash, { value: ethers.utils.parseEther(amount) });
+    await tx.wait();
+    alert("✅ Loan Offered!");
+  } catch (err) {
+    console.error(err);
+    alert("❌ Offer failed");
+  }
+};
+</script>
 </body>
 </html>
