--- a/index.html
+++ b/index.html
@@ -7,23 +7,24 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
 <style>
-  body { font-family: 'Segoe UI', sans-serif; padding: 20px; background: #f0f8ff; }
-  .card { padding: 20px; margin-bottom: 20px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
-  .btn { margin-top: 10px; }
+  body { font-family: 'Segoe UI', sans-serif; padding: 20px; background:#f5f5f5; }
+  .card { padding: 20px; margin-bottom: 20px; border-radius: 12px; }
+  .btn { margin-top: 10px; border-radius: 8px; }
+  h2 { color: #2c3e50; font-weight: bold; }
 </style>
 </head>
 <body>
 <h2 class="text-center mb-4">📜 Document-Backed Lending DApp</h2>
 
-<div class="card">
+<div class="card shadow">
   <h5>🔌 Wallet Connection</h5>
   <button class="btn btn-primary" id="connectBtn">Connect Wallet</button>
-  <p id="wallet">Wallet: Not Connected</p>
+  <p id="wallet">Wallet: ❌ Not Connected</p>
 </div>
 
 <div class="row">
   <div class="col-md-6">
-    <div class="card bg-light">
+    <div class="card bg-light shadow">
       <h5>💰 Lender Panel</h5>
       <input id="interestRate" class="form-control mb-2" placeholder="Interest Rate (%)">
       <input id="loanAmount" class="form-control mb-2" placeholder="Loan Amount (ETH)">
@@ -33,12 +34,12 @@
   </div>
 
   <div class="col-md-6">
-    <div class="card bg-light">
+    <div class="card bg-light shadow">
       <h5>📄 Borrower Panel</h5>
       <input type="file" id="borrowerDoc" class="form-control mb-2">
-      <button class="btn btn-primary w-100">Submit Document</button>
-      <button class="btn btn-info w-100">Take Loan</button>
-      <button class="btn btn-warning w-100">Repay Loan</button>
+      <button class="btn btn-primary w-100" id="submitDocBtn">Submit Document</button>
+      <button class="btn btn-info w-100" id="takeLoanBtn">Take Loan</button>
+      <button class="btn btn-warning w-100" id="repayLoanBtn">Repay Loan</button>
     </div>
   </div>
 </div>
@@ -46,20 +47,54 @@
 <script>
 let account, provider, signer, contract;
 const contractAddress = "0x081C0Dd797dAd42B954154ED6dd81346fac5bA2b";
-const contractABI = [ /* paste ABI here */ ];
+const contractABI = [ /* 🔹 Paste your ABI here */ ];
 
+// ✅ Connect wallet
 document.getElementById("connectBtn").onclick = async () => {
   if (window.ethereum) {
-    provider = new ethers.providers.Web3Provider(window.ethereum);
-    await provider.send("eth_requestAccounts", []);
-    signer = provider.getSigner();
-    account = await signer.getAddress();
-    document.getElementById("wallet").innerText = "Wallet: " + account;
+    try {
+      provider = new ethers.providers.Web3Provider(window.ethereum);
+      await provider.send("eth_requestAccounts", []);
+      signer = provider.getSigner();
+      account = await signer.getAddress();
+      document.getElementById("wallet").innerText = "Wallet: ✅ " + account;
 
-    contract = new ethers.Contract(contractAddress, contractABI, signer);
-    alert("✅ Wallet Connected!");
+      contract = new ethers.Contract(contractAddress, contractABI, signer);
+
+      alert("✅ Wallet Connected: " + account);
+    } catch (err) {
+      if (err.code === 4001) alert("❌ Connection rejected by user");
+      else alert("⚠️ " + err.message);
+    }
   } else {
     alert("⚠️ Please install MetaMask!");
+  }
+};
+
+// 🔑 File Hashing
+async function getFileHash(file) {
+  const arrayBuffer = await file.arrayBuffer();
+  const hashBuffer = await crypto.subtle.digest('SHA-256', arrayBuffer);
+  const hashArray = Array.from(new Uint8Array(hashBuffer));
+  return '0x' + hashArray.map(b => b.toString(16).padStart(2,'0')).join('');
+}
+
+// 💰 Offer Loan
+document.getElementById("offerLoanBtn").onclick = async () => {
+  if (!account) return alert("Connect wallet first!");
+  const rate = document.getElementById('interestRate').value;
+  const amount = document.getElementById('loanAmount').value;
+  const file = document.getElementById('lenderDoc').files[0];
+  if (!file) return alert("Upload document!");
+  const hash = await getFileHash(file);
+
+  try {
+    const tx = await contract.offerLoan(rate, hash, { value: ethers.utils.parseEther(amount) });
+    await tx.wait();
+    alert("✅ Loan Offered Successfully!");
+  } catch (err) {
+    console.error(err);
+    alert("❌ Offer failed: " + err.message);
   }
 };
 </script>
